# EasyQuest

./: README.md  package-lock.json  package.json  requirements.txt  search.html  search_selon_authors.html  search_selon_institutions.html  search_selon_keywords.html  serch.html  test.html  test10.html  test2.html  test3.html  test4.html  test5.html  test6.html  test7.html  test8.html  test9.html
Backend/: .env  Service.json  db.sqlite3  pyproject.toml
Backend/Backend/: .env  check_index.py  index.py  index_donnees.py  permissions.py  settings.py  urls.py  util.py
Backend/Backend/UserPart/: admin.py  models.py
Backend/Backend/article/: urls.py  views.py
Backend/Backend/env1/: pyvenv.cfg
Backend/Backend/esayquest/: settings.py
Backend/Backend/scripts/: pyvenv.cfg
Backend/UserPart/: admin.py  apps.py  forms.py  models.py  tous_articles_ndex.py
Backend/UserPart/api/: serialaizers.py  urls.py  views.py
Backend/UserPart/migrations/: 0001_initial.py  0002_alter_userprofile_options.py
Backend/article/: Exceptions.py  constants.py  contrller.py  controller.py  documents.py  models.py  serializers.py  tests.py  urls.py  views.py
Backend/article/extraction/: config.json  extraction.py  threaded_extraction.py
Backend/email_provider/: apps.py  tests.py  urls.py  views.py
Backend/moderator/: admin.py  apps.py  backends.py  models.py  serializers.py  urls.py  util.py  views.py
Backend/myApp/: api_views.py  apps.py  indexes.py  models.py  serializers.py  urls.py  views.py
Backend/omaromar/: .env  data.py  index.py  manage.py  tt.dy
Search/: urls.py  (+1 more)
(+166 files in other folders)
