[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mahraz Abdelrahmen <la_mahraz@esi.dz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
elasticsearch = "^8.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
